# C-brAIn-InsightEngine-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  dois.json  extract_dois.py  readme.md  requirements.txt
adqa_benchmark/: README.md  adqa_benchmark_cli.py  benchmark_logic.py  pyproject.toml
adqa_benchmark/data_folder/: medmcqa.json  medqa.json  mmlu.json  qa4mre.json
apps/api/: main.py
apps/services/: citation_service.py  hypothesis_runner.py  prompt_refinement_service.py  reviewer_three_service.py  workflow_registry.py
config/: global_config.py  llm_catalog.py  llm_config.py  llm_selection.py  logging_config.py  rag_config.yaml  settings.py
docs/: hybrid_rag_test.md
hallucination_test/: README.md  hallucination_evaluator_cli.py  pyproject.toml
src/agents/: claim_extractor.py  critique_agent.py  document_preprocessor.py  eval_agent.py  graph_query_agent.py  hallucination_detector.py  hybrid_query_agent.py  hypothesis_planner.py  nli_consensus_arbiter.py  prompt_analyzer.py  review_synthesizer.py  reviewer_benchmark_evidence.py  reviewer_domain_expert.py  reviewer_journal_editor.py  reviewer_methodological.py  semantic_arbiter.py  (+2 more)
utils/: blob_storage.py  check_metadata.py  citation_utils.py  database_migration.py  extract_json.py  extract_metadata.py  find_missing_doi.py  format_request_context.py  get_info_from_doi.py  handle_upload.py  load_csv_from_blob.py  load_pdf_from_blob.py  remove_duplicated_paperid.py  response_postprocessing.py  restore_vectors.py  retry_logic.py  review_parameters.py  weaviate_extract.py
(+78 files in other folders)
